infra/k8s/base/infra-services/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: energysuite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: energysuite/keycloak:latest
          imagePullPolicy: IfNotPresent
          args: ["start-dev", "--import-realm"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: energysuite
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: keycloak
